--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -4,13 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="8dp"
-        android:elevation="16dp"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,8 +21,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
                     android:text="1"
-                    android:textAlignment="center"
                     android:textColor="#fff"
                     android:textSize="18sp" />
 
@@ -39,13 +32,14 @@
                 android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/lay_one"
                 android:text="username"
                 android:textSize="16sp" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/user_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -72,10 +66,8 @@
                 android:layout_below="@+id/user_country"
                 android:layout_toRightOf="@+id/lay_one"
                 android:text="mobile"
-                android:textSize="16sp" />
+                android:textSize="16sp" />-->
 
         </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
